[project]
name = "paypulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.4.0",
    "coredis>=6.7.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.18",
    "redis>=5.0.0",
    "resend>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.34.0",
    "bcrypt>=4.0,<5.0",
]
